# Alpha-Sam

./: .cursorrules  .env.example  .env.prod  .env.prod.example  .gitignore  DEPLOYMENT.md  README.md  check_api.py  check_v040_analytics.py  check_v050_features.py  check_v060_market.py  check_v3_features.py  docker-compose.prod.yml  docker-compose.yml  test_agent_flow.py  test_slash.py  v0.7.0_frontend_plan.md
backend/: Dockerfile  Dockerfile.prod  README.md  alembic.ini  check_legacy_data.py  db_backup_v0.9.0.sql  errors.txt  final_test_results.txt  full_output_pos.txt  pyproject.toml  qa_analytics.py  qa_verification.py  test_celery.py  test_db_conn.py  test_errors.txt  test_errors2.txt  verify_portfolio.py  verify_price_service.py  verify_refactor.py  verify_snapshot.py  verify_update.py
backend/alembic/: env.py
backend/alembic/versions/: 03074d7a739b_add_nickname_to_users.py  0fc6672b204f_add_transaction_and_portfoliohistory_.py  169300a25bcd_add_notification_settings_table.py  2194c7f4929f_add_social_features_schema.py  23c0c0915d12_add_position_table.py  7e1faf4ea7e5_remove_position_table.py  (+11 more)
backend/app/: celery_app.py  main.py  test_email_devops.py
backend/scripts/: create_legacy_data.py  migrate_v090_legacy_data.py  price_collector.py  qa_generate_dirty_data_v090.py  verify_production_v090.py  verify_uuid_crud.py
backend/tests/: conftest.py  test_multi_tenancy.py  test_portfolio_asset_details.py  test_portfolio_service_recalc.py  test_portfolio_sharing.py  test_position_calculation.py  test_slash.py  test_social_features.py  test_social_integration.py
(+542 files in other folders)
