[project]
name = "alpha-sam-backend"
version = "0.1.0"
description = "Backend for Alpha-Sam Asset Dashboard"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "sqlmodel>=0.0.14",
    "asyncpg>=0.29.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.1.0",
    "pydantic-settings>=2.1.0",
    "alembic>=1.13.1",
    "greenlet>=3.3.0",
    "redis>=5.0.0",
    "hiredis>=2.2.0",
    "celery>=5.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.1",
    "argon2-cffi>=25.1.0",
    "yfinance>=0.2.66",
    "aiohttp>=3.13.2",
    "jinja2>=3.1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
